--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Lab Engineer at School of EE and CS (SEECS), NUST, Islamabad, Pakistan.
 
 </table>
 
-<!-- Project -->
+<!-- <!-- Project -->
 <a id="education" class="anchor"></a>
 <h2>Education</h2>
 <table class="imgtable">
@@ -214,7 +214,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 </td>
 </tr>
 	
-</table>
+</table> -->
 
 <!-- Project -->
 <a id="services" class="anchor"></a>
