--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@ title: Akhtar, CV & DL
 <table class="imgtable">
 <!-- paper entry-->
 <ul>
+
+<li><p> <b><i>Muhammad Akhtar Munir</i></b>, Fahad Shahbaz Khan, and Salman Khan.
+	<strong>"Efficient Localized Adaptation of Neural Weather Forecasting: A Case Study in the MENA Region"</strong>. In <strong>CCAI-NeurIPS (2024)</strong>.
+	<a href="https://arxiv.org/pdf/2409.07585">[Paper]</a>
+	<a href="https://github.com/akhtarvision/weather-regional">[Code]</a>
+</p></li>
+	
 <li><p> Sohail Danish, Muhammad Haris Khan, <b><i>Muhammad Akhtar Munir</i></b>, Saquib Sarfraz, and Mohsen Ali.
 	<strong>"Improving Single Domain-Generalized Object Detection: A Focus on Diversification and Alignment"</strong>. In <strong>CVPR (2024)</strong>.
 	<a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Danish_Improving_Single_Domain-Generalized_Object_Detection_A_Focus_on_Diversification_and_CVPR_2024_paper.pdf">[Paper]</a>
