--- a/index.html
+++ b/index.html
@@ -12,23 +12,27 @@ title: Akhtar, CV & DL
 	<br> -->
 	<h1>Hi, I'm Akhtar</h1>
 <!-- 	</div> -->
-	      	<img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160" style="float:right">
-<!-- 		<img class="roundImg" src="1702601702642.jpg" alt="profile" width="180" height="170" style="float:right"> -->
-<!-- 		<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right"> -->
+<!-- 	<img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160" style="float:right">
 
 	<address>
-		
 		Research Associate (Computer Vision)<br>
 		MBZUAI, Abu Dhabi<br>
 		United Arab Emirates<br><br>
-<!-- 		Ph.D. Student (Computer Vision & Deep Learning)</strong><br>
-		Intelligent Machines Lab<br>
-		Information Technology University (ITU)<br><br> -->
 		Contact Email:<br>
-<!-- 		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br> -->
 		<span>its &ltdot&gt akhtar90 &ltat&gt gmail &ltdot&gt com</span><br>
 		<span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
-		</address>
+	</address> -->
+	<img src="ul_pic.jpeg" alt="profile" width="200" height="160" style="float:right; border-radius:50%;">
+
+<address>
+    Research Associate (Computer Vision)<br>
+    MBZUAI, Abu Dhabi<br>
+    United Arab Emirates<br><br>
+    Contact Email:<br>
+    <span style="display:block; margin-top:10px;">its.akhtar90@gmail.com</span>
+    <span style="display:block;">akhtar.munir@mbzuai.ac.ae</span>
+</address>
+
 &nbsp
 		<ul class="social">
 		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
