--- a/index.html
+++ b/index.html
@@ -22,16 +22,27 @@ title: Akhtar, CV & DL
 		<span>its &ltdot&gt akhtar90 &ltat&gt gmail &ltdot&gt com</span><br>
 		<span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
 	</address> -->
-	<img src="ul_pic.jpeg" alt="profile" width="200" height="160" style="float:right; border-radius:50%;">
+	
+	<div style="overflow:auto;">
+    <img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160" style="float:left; margin-right:20px;">
+    
+    <div>
+        <p style="margin-top:0;">
+            Research Associate (Computer Vision)<br>
+            MBZUAI, Abu Dhabi<br>
+            United Arab Emirates
+        </p>
+    </div>
 
-<address>
-    Research Associate (Computer Vision)<br>
-    MBZUAI, Abu Dhabi<br>
-    United Arab Emirates<br><br>
-    Contact Email:<br>
-    <span style="display:block; margin-top:10px;">its.akhtar90@gmail.com</span>
-    <span style="display:block;">akhtar.munir@mbzuai.ac.ae</span>
-</address>
+    <div style="clear:both;"></div>
+
+    <div style="float:left; margin-top:10px;">
+        <strong>Contact Email:</strong><br>
+        <span>its &ltdot&gt akhtar90 &ltat&gt gmail &ltdot&gt com</span><br>
+        <span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
+    </div>
+</div>
+
 
 &nbsp
 		<ul class="social">
