--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@ title: Akhtar, CV & DL
 		<span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
 	</address> -->
 	
-	<div style="overflow:auto;">
-    <img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160" style="float:left; margin-right:20px;">
-    
+	<div style="display: flex; justify-content: space-between;">
     <div>
-        <p style="margin-top:0;">
-            Research Associate (Computer Vision)<br>
+        <p>Research Associate (Computer Vision)<br>
             MBZUAI, Abu Dhabi<br>
-            United Arab Emirates
+            United Arab Emirates<br><br>
         </p>
     </div>
-
-    <div style="clear:both;"></div>
-
-    <div style="float:left; margin-top:10px;">
-        <strong>Contact Email:</strong><br>
-        <span>its &ltdot&gt akhtar90 &ltat&gt gmail &ltdot&gt com</span><br>
-        <span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
+    <div style="display: flex; flex-direction: column; align-items: flex-end;">
+        <img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160">
+        <address style="text-align: right;">
+            Contact Email:<br>
+            <span>its &ltdot&gt akhtar90 &ltat&gt gmail &ltdot&gt com</span><br>
+            <span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
+        </address>
     </div>
 </div>
+
 
 
 &nbsp
