--- a/index.html
+++ b/index.html
@@ -25,15 +25,23 @@ title: Akhtar, CV & DL
 	
 	<div style="display: flex; justify-content: space-between;">
     <div>
-        <p>Research Associate (Computer Vision)<br>
-            MBZUAI, Abu Dhabi<br>
-            United Arab Emirates<br><br>
+        <p>
+		Research Associate (Computer Vision)<br>
+            	MBZUAI, Abu Dhabi<br>
+            	United Arab Emirates<br><br>
+
+		<ul class="social">
+		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
+		<li><a href="https://twitter.com/akhtarTalks">Twitter</a></li>
+		<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
+		<li><a href="https://github.com/akhtarvision">GitHub</a></li>
+		</ul>
         </p>
     </div>
     <div style="display: flex; flex-direction: column; align-items: flex-end;">
         <img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160">
         <address style="text-align: right;">
-            Contact Email:<br>
+<!--             Contact Email:<br> -->
             <span>its &ltdot&gt akhtar90 &ltat&gt gmail &ltdot&gt com</span><br>
             <span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
         </address>
@@ -43,13 +51,12 @@ title: Akhtar, CV & DL
 
 
 &nbsp
-		<ul class="social">
+<!-- 		<ul class="social">
 		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
 		<li><a href="https://twitter.com/akhtarTalks">Twitter</a></li>
 		<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
 		<li><a href="https://github.com/akhtarvision">GitHub</a></li>
-<!-- 		<li><a href="http://im.itu.edu.pk/">Research Lab (IML)</a></li> -->
-		</ul>
+		</ul> -->
 	
 		
 <!-- 	<div class="column"> -->
