--- a/index.html
+++ b/index.html
@@ -22,7 +22,39 @@ title: Akhtar, CV & DL
 		<span>its &ltdot&gt akhtar90 &ltat&gt gmail &ltdot&gt com</span><br>
 		<span>akhtar &ltdot&gt munir &ltat&gt mbzuai &ltdot&gt ac &ltdot&gt ae</span>
 	</address> -->
-	
+
+	<div style="display: flex; justify-content: space-between;">
+    <div>
+        <p>
+            <strong>Research Associate (Computer Vision)</strong><br>
+            MBZUAI, Abu Dhabi<br>
+            United Arab Emirates<br><br>
+
+            <ul class="social">
+                <li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
+                <li><a href="https://twitter.com/akhtarTalks">Twitter</a></li>
+                <li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
+                <li><a href="https://github.com/akhtarvision">GitHub</a></li>
+            </ul>
+        </p>
+    </div>
+    <div style="display: flex; flex-direction: column; align-items: flex-end;">
+        <img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160">
+        <address style="text-align: right; font-family: 'Arial', sans-serif; font-size: 14px; color: #555; letter-spacing: 0.5px;">
+            <br>
+            <span>its<span style="color: #555;">&lt;dot&gt;</span>akhtar90<span style="color: #555;">&lt;at&gt;</span>gmail<span style="color: #555;">&lt;dot&gt;</span>com</span><br>
+            <span>akhtar<span style="color: #555;">&lt;dot&gt;</span>munir<span style="color: #555;">&lt;at&gt;</span>mbzuai<span style="color: #555;">&lt;dot&gt;</span>ac<span style="color: #555;">&lt;dot&gt;</span>ae</span>
+        </address>
+    </div>
+</div>
+
+&nbsp;
+<p style="font-family: 'Georgia', serif; font-size: 18px; line-height: 1.6; text-align: justify;"> 
+    I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like Domain Adaptation, Uncertainty Estimation, Model Calibration, and Vision-Language Models (VLMs). 
+    Currently, I am focused on tackling challenges in Model Calibration, enhancing the accuracy of Weather Modeling, and improving Remote Sensing analysis through VLMs.
+</p>
+
+<!-- 	
 	<div style="display: flex; justify-content: space-between;">
     <div>
         <p>
@@ -69,7 +101,7 @@ title: Akhtar, CV & DL
           <p> 
 		  I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like Domain Adaptation, Uncertainty Estimation, Model Calibration, and Vision-Language Models (VLMs). 
 		  Currently, I am focused on tackling challenges in Model Calibration, enhancing the accuracy of Weather Modeling, and improving Remote Sensing analysis through VLMs.
-	  </p>
+	  </p> -->
 
 <!-- Project -->
 <a id="publications" class="anchor"></a>
