--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Akhtar, CV & DL
 <!-- 	</div> -->
 
 	<div style="display: flex; justify-content: space-between;">
-    <div>
+<!--     <div>
         <p>
             <strong>Research Associate (Computer Vision)</strong><br>
             MBZUAI, Abu Dhabi<br>
@@ -27,7 +27,42 @@ title: Akhtar, CV & DL
                 <li><a href="https://github.com/akhtarvision">GitHub</a></li>
             </ul>
         </p>
-    </div>
+    </div> -->
+
+<!-- Link to font-awesome icons (make sure to include this in the head of your HTML) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<div>
+    <p>
+        <strong>Research Associate (Computer Vision)</strong><br>
+        MBZUAI, Abu Dhabi<br>
+        United Arab Emirates<br><br>
+
+        <ul class="social" style="list-style-type: none; padding-left: 0; display: flex; gap: 10px;">
+            <li>
+                <a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/" style="text-decoration: none; color: #0e76a8;">
+                    <i class="fab fa-linkedin" style="font-size: 24px;"></i> LinkedIn
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/akhtarTalks" style="text-decoration: none; color: #1DA1F2;">
+                    <i class="fab fa-twitter" style="font-size: 24px;"></i> Twitter
+                </a>
+            </li>
+            <li>
+                <a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en" style="text-decoration: none; color: #4285F4;">
+                    <i class="fas fa-graduation-cap" style="font-size: 24px;"></i> Google Scholar
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/akhtarvision" style="text-decoration: none; color: #333;">
+                    <i class="fab fa-github" style="font-size: 24px;"></i> GitHub
+                </a>
+            </li>
+        </ul>
+    </p>
+</div>
+
     <div style="display: flex; flex-direction: column; align-items: flex-end;">
         <img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160">
         <address style="text-align: right; font-family: 'Arial', sans-serif; font-size: 14px; color: #555; letter-spacing: 0.5px;">
