--- a/index.html
+++ b/index.html
@@ -13,21 +13,7 @@ title: Akhtar, CV & DL
 	<h1>Hi, I'm Akhtar</h1>
 <!-- 	</div> -->
 
-	<div style="display: flex; justify-content: space-between;">
-<!--     <div>
-        <p>
-            <strong>Research Associate (Computer Vision)</strong><br>
-            MBZUAI, Abu Dhabi<br>
-            United Arab Emirates<br><br>
-
-            <ul class="social">
-                <li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
-                <li><a href="https://twitter.com/akhtarTalks">Twitter</a></li>
-                <li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
-                <li><a href="https://github.com/akhtarvision">GitHub</a></li>
-            </ul>
-        </p>
-    </div> -->
+<!-- <div style="display: flex; justify-content: space-between;"> -->
 
 <!-- Link to font-awesome icons (make sure to include this in the head of your HTML) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
