--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@ title: Akhtar, CV & DL
 		
 		
 <!-- 	<div class="column"> -->
-<!-- 	<br>
-	<br> -->
 	<h1>Hi, I'm Akhtar</h1>
-<!-- 	</div> -->
 
-<!-- <div style="display: flex; justify-content: space-between;"> -->
+<div style="display: flex; justify-content: space-between;">
 
 <!-- Link to font-awesome icons (make sure to include this in the head of your HTML) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -48,7 +45,6 @@ title: Akhtar, CV & DL
         </ul>
     </p>
 </div>
-
     <div style="display: flex; flex-direction: column; align-items: flex-end;">
         <img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160">
         <address style="text-align: right; font-family: 'Arial', sans-serif; font-size: 14px; color: #555; letter-spacing: 0.5px;">
@@ -58,12 +54,12 @@ title: Akhtar, CV & DL
         </address>
     </div>
 </div>
-
 &nbsp;
 <p style="font-family: 'Georgia', serif; font-size: 18px; line-height: 1.6; text-align: justify;"> 
     I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like Domain Adaptation, Uncertainty Estimation, Model Calibration, and Vision-Language Models (VLMs). 
     Currently, I am focused on tackling challenges in Model Calibration, enhancing the accuracy of Weather Modeling, and improving Remote Sensing analysis through VLMs.
 </p>
+
 
 <!-- Project -->
 <a id="publications" class="anchor"></a>
