--- a/index.html
+++ b/index.html
@@ -10,50 +10,57 @@ title: Akhtar, CV & DL
 <!-- 	<div class="column"> -->
 	<h1>Hi, I'm Akhtar</h1>
 
-<div style="display: flex; justify-content: space-between;">
 <!-- Link to font-awesome icons (make sure to include this in the head of your HTML) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-<div>
-    <p>
-        <strong>Research Associate (Computer Vision)</strong><br>
-        MBZUAI, Abu Dhabi<br>
-        United Arab Emirates<br><br>
+<div style="display: flex; justify-content: space-between;">
+    <!-- Left section for title, social links, and email addresses -->
+    <div>
+        <p style="font-family: 'Arial', sans-serif; font-size: 20px; color: #333; line-height: 1.5; margin: 0;">
+            <strong style="font-size: 22px; color: #2c3e50;">Research Associate (Computer Vision)</strong><br>
+            <span style="font-size: 18px; color: #7f8c8d;">MBZUAI, Abu Dhabi</span><br>
+            <span style="font-size: 16px; color: #7f8c8d;">United Arab Emirates</span><br><br>
 
-        <ul class="social" style="list-style-type: none; padding-left: 0; display: flex; gap: 10px;">
-            <li>
-                <a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/" style="text-decoration: none; color: #0e76a8;">
-                    <i class="fab fa-linkedin" style="font-size: 24px;"></i> LinkedIn
-                </a>
-            </li>
-            <li>
-                <a href="https://twitter.com/akhtarTalks" style="text-decoration: none; color: #1DA1F2;">
-                    <i class="fab fa-twitter" style="font-size: 24px;"></i> Twitter
-                </a>
-            </li>
-            <li>
-                <a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en" style="text-decoration: none; color: #4285F4;">
-                    <i class="fas fa-graduation-cap" style="font-size: 24px;"></i> Google Scholar
-                </a>
-            </li>
-            <li>
-                <a href="https://github.com/akhtarvision" style="text-decoration: none; color: #333;">
-                    <i class="fab fa-github" style="font-size: 24px;"></i> GitHub
-                </a>
-            </li>
-        </ul>
-    </p>
-</div>
+            <!-- Social media links with icons -->
+            <ul class="social" style="list-style-type: none; padding-left: 0; display: flex; gap: 10px; margin-bottom: 10px;">
+                <li>
+                    <a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/" style="text-decoration: none; color: #0e76a8;">
+                        <i class="fab fa-linkedin" style="font-size: 24px;"></i> LinkedIn
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/akhtarTalks" style="text-decoration: none; color: #1DA1F2;">
+                        <i class="fab fa-twitter" style="font-size: 24px;"></i> Twitter
+                    </a>
+                </li>
+                <li>
+                    <a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en" style="text-decoration: none; color: #4285F4;">
+                        <i class="fas fa-graduation-cap" style="font-size: 24px;"></i> Google Scholar
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/akhtarvision" style="text-decoration: none; color: #333;">
+                        <i class="fab fa-github" style="font-size: 24px;"></i> GitHub
+                    </a>
+                </li>
+            </ul>
+
+            <!-- Email addresses -->
+            <address style="font-family: 'Arial', sans-serif; font-size: 14px; color: #555; letter-spacing: 0.5px;">
+                <span>its<span style="color: #555;">&lt;dot&gt;</span>akhtar90<span style="color: #555;">&lt;at&gt;</span>gmail<span style="color: #555;">&lt;dot&gt;</span>com</span><br>
+                <span>akhtar<span style="color: #555;">&lt;dot&gt;</span>munir<span style="color: #555;">&lt;at&gt;</span>mbzuai<span style="color: #555;">&lt;dot&gt;</span>ac<span style="color: #555;">&lt;dot&gt;</span>ae</span>
+            </address>
+        </p>
+    </div>
+
+    <!-- Right section for profile picture -->
     <div style="display: flex; flex-direction: column; align-items: flex-end;">
         <img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160">
-        <address style="text-align: right; font-family: 'Arial', sans-serif; font-size: 14px; color: #555; letter-spacing: 0.5px;">
-            <br>
-            <span>its<span style="color: #555;">&lt;dot&gt;</span>akhtar90<span style="color: #555;">&lt;at&gt;</span>gmail<span style="color: #555;">&lt;dot&gt;</span>com</span><br>
-            <span>akhtar<span style="color: #555;">&lt;dot&gt;</span>munir<span style="color: #555;">&lt;at&gt;</span>mbzuai<span style="color: #555;">&lt;dot&gt;</span>ac<span style="color: #555;">&lt;dot&gt;</span>ae</span>
-        </address>
     </div>
 </div>
+
 &nbsp;
+<!-- Bio section with improved aesthetics -->
 <p style="font-family: 'Georgia', serif; font-size: 18px; line-height: 1.6; text-align: justify;"> 
     I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like Domain Adaptation, Uncertainty Estimation, Model Calibration, and Vision-Language Models (VLMs). 
     Currently, I am focused on tackling challenges in Model Calibration, enhancing the accuracy of Weather Modeling, and improving Remote Sensing analysis through VLMs.
