--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Akhtar, CV & DL
         <p style="font-family: 'Arial', sans-serif; font-size: 20px; color: #333; line-height: 1.5; margin: 0;">
             <strong style="font-size: 22px; color: #2c3e50;">Research Associate (Computer Vision)</strong><br>
             <span style="font-size: 18px; color: #7f8c8d;">MBZUAI, Abu Dhabi</span><br>
-            <span style="font-size: 16px; color: #7f8c8d;">United Arab Emirates</span><br><br>
+            <span style="font-size: 16px; color: #7f8c8d;">United Arab Emirates</span><br>
 
             <!-- Social media links with icons -->
             <ul class="social" style="list-style-type: none; padding-left: 0; display: flex; gap: 10px; margin-bottom: 10px;">
@@ -44,8 +44,9 @@ title: Akhtar, CV & DL
                     </a>
                 </li>
             </ul>
+	    <br>
 
-            <!-- Email addresses -->
+<!--             Email addresses -->
             <address style="font-family: 'Arial', sans-serif; font-size: 14px; color: #555; letter-spacing: 0.5px;">
                 <span>its<span style="color: #555;">&lt;dot&gt;</span>akhtar90<span style="color: #555;">&lt;at&gt;</span>gmail<span style="color: #555;">&lt;dot&gt;</span>com</span><br>
                 <span>akhtar<span style="color: #555;">&lt;dot&gt;</span>munir<span style="color: #555;">&lt;at&gt;</span>mbzuai<span style="color: #555;">&lt;dot&gt;</span>ac<span style="color: #555;">&lt;dot&gt;</span>ae</span>
