--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@ title: Akhtar, CV & DL
             </ul>
 	    <br>
 
-<!--             Email addresses -->
-            <address style="font-family: 'Arial', sans-serif; font-size: 14px; color: #555; letter-spacing: 0.5px;">
+            <!-- Email addresses with similar size adjustment -->
+            <address style="font-family: 'Arial', sans-serif; font-size: 18px; color: #555; letter-spacing: 0.5px;">
                 <span>its<span style="color: #555;">&lt;dot&gt;</span>akhtar90<span style="color: #555;">&lt;at&gt;</span>gmail<span style="color: #555;">&lt;dot&gt;</span>com</span><br>
                 <span>akhtar<span style="color: #555;">&lt;dot&gt;</span>munir<span style="color: #555;">&lt;at&gt;</span>mbzuai<span style="color: #555;">&lt;dot&gt;</span>ac<span style="color: #555;">&lt;dot&gt;</span>ae</span>
             </address>
         </p>
     </div>
 
-    <!-- Right section for profile picture -->
+    <!-- Right section for profile picture with 85% frame coverage -->
     <div style="display: flex; flex-direction: column; align-items: flex-end;">
-        <img class="roundImg" src="ul_pic.jpeg" alt="profile" width="200" height="160">
+        <img class="roundImg" src="ul_pic.jpeg" alt="profile" style="width: 230px; height: 184px; object-fit: cover;">
     </div>
 </div>
 
 &nbsp;
 <!-- Bio section with improved aesthetics -->
-<p style="font-family: 'Georgia', serif; font-size: 18px; line-height: 1.6; text-align: justify;"> 
+<p style="font-family: 'Georgia', serif; font-size: 16px; line-height: 1.5; text-align: justify;"> 
     I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like Domain Adaptation, Uncertainty Estimation, Model Calibration, and Vision-Language Models (VLMs). 
     Currently, I am focused on tackling challenges in Model Calibration, enhancing the accuracy of Weather Modeling, and improving Remote Sensing analysis through VLMs.
 </p>
