--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ title: Akhtar, CV & DL
             </ul>
 	    <br>
 
-            <!-- Email addresses with similar size adjustment -->
+            <!-- Email addresses with different fonts for <dot> and <at> -->
             <address style="font-family: 'Arial', sans-serif; font-size: 18px; color: #555; letter-spacing: 0.5px;">
-                <span>its<span style="color: #555;">&lt;dot&gt;</span>akhtar90<span style="color: #555;">&lt;at&gt;</span>gmail<span style="color: #555;">&lt;dot&gt;</span>com</span><br>
-                <span>akhtar<span style="color: #555;">&lt;dot&gt;</span>munir<span style="color: #555;">&lt;at&gt;</span>mbzuai<span style="color: #555;">&lt;dot&gt;</span>ac<span style="color: #555;">&lt;dot&gt;</span>ae</span>
+                <span>its<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>akhtar90<span style="font-family: 'Courier New', monospace;">&lt;at&gt;</span>gmail<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>com</span><br>
+                <span>akhtar<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>munir<span style="font-family: 'Courier New', monospace;">&lt;at&gt;</span>mbzuai<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>ac<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>ae</span>
             </address>
         </p>
     </div>
