--- a/index.html
+++ b/index.html
@@ -73,13 +73,12 @@ title: Akhtar, CV & DL
 <h2>Selected Publications</h2>
 <table class="imgtable">
 <!-- paper entry-->
-
-	<ul style="font-family: 'Georgia', serif; font-size: 17px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
+<ul style="font-family: 'Georgia', serif; font-size: 17px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
     <li style="margin-bottom: 20px;">
         <p>
-            <b><i>Muhammad Akhtar Munir</i></b>, Fahad Shahbaz Khan, and Salman Khan. <br>
+            <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Fahad Shahbaz Khan, and Salman Khan. <br>
             <strong>"Efficient Localized Adaptation of Neural Weather Forecasting: A Case Study in the MENA Region"</strong>. 
-            In <strong>CCAI-NeurIPS (2024)</strong>. 
+            In <strong>CCAI-NeurIPS (2024)</strong>. <br>
             <a href="https://arxiv.org/pdf/2409.07585" style="text-decoration: none; color: #3498db;">[Paper]</a> 
             <a href="https://github.com/akhtarvision/weather-regional" style="text-decoration: none; color: #e74c3c;">[Code]</a>
         </p>
@@ -87,9 +86,9 @@ title: Akhtar, CV & DL
 
     <li style="margin-bottom: 20px;">
         <p>
-            Sohail Danish, Muhammad Haris Khan, <b><i>Muhammad Akhtar Munir</i></b>, Saquib Sarfraz, and Mohsen Ali. <br>
+            Sohail Danish, Muhammad Haris Khan, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Saquib Sarfraz, and Mohsen Ali. <br>
             <strong>"Improving Single Domain-Generalized Object Detection: A Focus on Diversification and Alignment"</strong>. 
-            In <strong>CVPR (2024)</strong>. 
+            In <strong>CVPR (2024)</strong>. <br>
             <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Danish_Improving_Single_Domain-Generalized_Object_Detection_A_Focus_on_Diversification_and_CVPR_2024_paper.pdf" style="text-decoration: none; color: #3498db;">[Paper]</a> 
             <a href="https://github.com/msohaildanish/DivAlign" style="text-decoration: none; color: #e74c3c;">[Code]</a>
         </p>
@@ -97,9 +96,9 @@ title: Akhtar, CV & DL
 
     <li style="margin-bottom: 20px;">
         <p>
-            <b><i>Muhammad Akhtar Munir</i></b>, Salman Khan, Muhammad Haris Khan, Mohsen Ali, and Fahad Shahbaz Khan. <br>
+            <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Salman Khan, Muhammad Haris Khan, Mohsen Ali, and Fahad Shahbaz Khan. <br>
             <strong>"Cal-DETR: Calibrated Detection Transformer"</strong>. 
-            In <strong>NeurIPS (2023)</strong>. 
+            In <strong>NeurIPS (2023)</strong>. <br>
             <a href="https://openreview.net/pdf?id=4SkPTD6XNP" style="text-decoration: none; color: #3498db;">[Paper]</a> 
             <a href="https://github.com/akhtarvision/cal-detr" style="text-decoration: none; color: #e74c3c;">[Code]</a>
         </p>
@@ -107,9 +106,9 @@ title: Akhtar, CV & DL
 
     <li style="margin-bottom: 20px;">
         <p>
-            <b><i>Muhammad Akhtar Munir</i></b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali. <br>
+            <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali. <br>
             <strong>"Domain Adaptive Object Detection via Balancing between Self-Training and Adversarial Learning"</strong>. 
-            In <strong>IEEE TPAMI (2023)</strong>. 
+            In <strong>IEEE TPAMI (2023)</strong>. <br>
             <a href="https://ieeexplore.ieee.org/document/10173487" style="text-decoration: none; color: #3498db;">[Paper]</a> 
             <a href="https://im.itu.edu.pk/synergizing-domain-adaptation/" style="text-decoration: none; color: #e74c3c;">[Project Page]</a>
         </p>
@@ -117,9 +116,9 @@ title: Akhtar, CV & DL
 
     <li style="margin-bottom: 20px;">
         <p>
-            <b><i>Muhammad Akhtar Munir</i></b>, Muhammad Haris Khan, Salman Khan, and Fahad Shahbaz Khan. <br>
+            <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Salman Khan, and Fahad Shahbaz Khan. <br>
             <strong>"Bridging Precision and Confidence: A Train-Time Loss for Calibrating Object Detection"</strong>. 
-            In <strong>CVPR (2023)</strong>. 
+            In <strong>CVPR (2023)</strong>. <br>
             <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Munir_Bridging_Precision_and_Confidence_A_Train-Time_Loss_for_Calibrating_Object_CVPR_2023_paper.pdf" style="text-decoration: none; color: #3498db;">[Paper]</a> 
             <a href="https://github.com/akhtarvision/bpc_calibration" style="text-decoration: none; color: #e74c3c;">[Code]</a>
         </p>
@@ -127,9 +126,9 @@ title: Akhtar, CV & DL
 
     <li style="margin-bottom: 20px;">
         <p>
-            <b><i>Muhammad Akhtar Munir</i></b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali. <br>
+            <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali. <br>
             <strong>"Towards improving calibration in object detection under domain shift"</strong>. 
-            In <strong>NeurIPS (2022)</strong>. 
+            In <strong>NeurIPS (2022)</strong>. <br>
             <a href="https://openreview.net/pdf?id=a7YeDeacHpL" style="text-decoration: none; color: #3498db;">[Paper]</a> 
             <a href="https://github.com/akhtarvision/tcd_calib" style="text-decoration: none; color: #e74c3c;">[Code]</a>
         </p>
@@ -137,9 +136,9 @@ title: Akhtar, CV & DL
 
     <li style="margin-bottom: 20px;">
         <p>
-            <b><i>Muhammad Akhtar Munir</i></b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali. <br>
+            <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali. <br>
             <strong>"SSAL: Synergizing between Self-Training and Adversarial Learning for Domain Adaptive Object Detection"</strong>. 
-            In <strong>NeurIPS (2021)</strong>. 
+            In <strong>NeurIPS (2021)</strong>. <br>
             <a href="https://proceedings.neurips.cc/paper/2021/file/c0cccc24dd23ded67404f5e511c342b0-Paper.pdf" style="text-decoration: none; color: #3498db;">[Paper]</a> 
             <a href="https://im.itu.edu.pk/synergizing-domain-adaptation/" style="text-decoration: none; color: #e74c3c;">[Project Page]</a>
         </p>
@@ -147,9 +146,9 @@ title: Akhtar, CV & DL
 
     <li style="margin-bottom: 20px;">
         <p>
-            Javed Iqbal, <b><i>Muhammad Akhtar Munir</i></b>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali. <br>
+            Javed Iqbal, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali. <br>
             <strong>"Leveraging orientation for weakly supervised object detection with application to firearm localization"</strong>. 
-            In <strong>Neurocomputing (2021)</strong>. 
+            In <strong>Neurocomputing (2021)</strong>. <br>
             <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X" style="text-decoration: none; color: #3498db;">[Paper]</a> 
             <a href="https://github.com/akhtarvision/orientation-aware-firearm-detection" style="text-decoration: none; color: #e74c3c;">[Code]</a>
         </p>
