--- a/index.html
+++ b/index.html
@@ -162,51 +162,48 @@ title: Akhtar, CV & DL
 <h2>Experience</h2>
 <table class="imgtable">
 <!-- paper entry-->
-<div style="font-family: 'Georgia', serif; font-size: 17px; line-height: 1.8; color: #2c3e50;">
-    <p><strong>Research Associate</strong> at Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE.</p>
-    <ul style="list-style-type: none; padding-left: 0;">
+
+	<div style="font-family: 'Arial', sans-serif; font-size: 16px; line-height: 1.5; color: #2c3e50;">
+    <p><strong>Research Associate</strong>, Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE</p>
+    <ul style="list-style-type: none; padding-left: 0; margin-bottom: 5px;">
         <li><strong>Duration:</strong> July 2023 – Present</li>
         <li><strong>Association:</strong> Computer Vision Department</li>
         <li><strong>Advisors:</strong> 
-            <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #3498db;">Dr. Salman Khan</a>, 
-            <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #3498db;">Dr. Fahad S Khan</a>
+            <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
+            <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Fahad S Khan</a>
         </li>
     </ul>
-    <br>
 
-    <p><strong>Research Intern</strong> at Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE.</p>
-    <ul style="list-style-type: none; padding-left: 0;">
+    <p><strong>Research Intern</strong>, Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE</p>
+    <ul style="list-style-type: none; padding-left: 0; margin-bottom: 5px;">
         <li><strong>Duration:</strong> August 2022 – June 2023</li>
         <li><strong>Association:</strong> Computer Vision Department</li>
         <li><strong>Advisors:</strong> 
-            <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #3498db;">Dr. Salman Khan</a>, 
-            <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #3498db;">Dr. Fahad S Khan</a>
+            <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
+            <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Fahad S Khan</a>
         </li>
     </ul>
-    <br>
 
-    <p><strong>Research Associate</strong> at Information Technology University (ITU), Lahore, Pakistan.</p>
-    <ul style="list-style-type: none; padding-left: 0;">
+    <p><strong>Research Associate</strong>, Information Technology University (ITU), Lahore, Pakistan</p>
+    <ul style="list-style-type: none; padding-left: 0; margin-bottom: 5px;">
         <li><strong>Duration:</strong> January 2022 – July 2022</li>
         <li><strong>Association:</strong> Under Google Research Scholar Award, ITU</li>
         <li><strong>PI:</strong> 
-            <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #3498db;">Dr. Mohsen Ali</a>
+            <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Mohsen Ali</a>
         </li>
     </ul>
-    <br>
 
-    <p><strong> Fellowship </strong> at Information Technology University (ITU), Lahore, Pakistan.</p>
-    <ul style="list-style-type: none; padding-left: 0;">
-        <li><strong>Duration:</strong> September 2017 – August 2021</li>
+    <p><strong>Fellowship</strong>, Information Technology University (ITU), Lahore, Pakistan</p>
+    <ul style="list-style-type: none; padding-left: 0; margin-bottom: 5px;">
+        <li><strong>Duration:</strong> September 2017 – Present</li>
         <li><strong>Association:</strong> Intelligent Machines Lab, ITU</li>
         <li><strong>Advisor:</strong> 
-            <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #3498db;">Dr. Mohsen Ali</a>
+            <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Mohsen Ali</a>
         </li>
     </ul>
-    <br>
 
-    <p><strong>Lab Engineer</strong> at School of EE and CS (SEECS), NUST, Islamabad, Pakistan.</p>
-    <ul style="list-style-type: none; padding-left: 0;">
+    <p><strong>Lab Engineer</strong>, School of EE and CS (SEECS), NUST, Islamabad, Pakistan</p>
+    <ul style="list-style-type: none; padding-left: 0; margin-bottom: 5px;">
         <li><strong>Duration:</strong> November 2013 – September 2017</li>
         <li><strong>Association:</strong> Department of Computing, SEECS, NUST</li>
     </ul>
