--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ title: Akhtar, CV & DL
 
     <p><strong>Fellowship</strong>, Information Technology University (ITU), Lahore, Pakistan</p>
     <ul style="list-style-type: none; padding-left: 0; margin-bottom: 5px;">
-        <li><strong>Duration:</strong> September 2017 – Present</li>
+        <li><strong>Duration:</strong> September 2017 – August 2021</li>
         <li><strong>Association:</strong> Intelligent Machines Lab, ITU</li>
         <li><strong>Advisor:</strong> 
             <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Mohsen Ali</a>
