--- a/index.html
+++ b/index.html
@@ -89,7 +89,30 @@ title: Akhtar, CV & DL
                <a href="https://github.com/akhtarvision/bpc_calibration" style="text-decoration: none; color: #e74c3c;">[Code]</a>
             </p>
         </li>
-        <!-- Additional publication entries here -->
+        <li style="margin-bottom: 20px;">
+            <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.<br>
+               <strong>"Towards improving calibration in object detection under domain shift"</strong>. 
+               In <strong>NeurIPS (2022)</strong>.<br>
+               <a href="https://openreview.net/pdf?id=a7YeDeacHpL" style="text-decoration: none; color: #3498db;">[Paper]</a> 
+               <a href="https://github.com/akhtarvision/tcd_calib" style="text-decoration: none; color: #e74c3c;">[Code]</a>
+            </p>
+        </li>
+        <li style="margin-bottom: 20px;">
+            <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.<br>
+               <strong>"SSAL: Synergizing between Self-Training and Adversarial Learning for Domain Adaptive Object Detection"</strong>. 
+               In <strong>NeurIPS (2021)</strong>.<br>
+               <a href="https://proceedings.neurips.cc/paper/2021/file/c0cccc24dd23ded67404f5e511c342b0-Paper.pdf" style="text-decoration: none; color: #3498db;">[Paper]</a> 
+               <a href="https://im.itu.edu.pk/synergizing-domain-adaptation/" style="text-decoration: none; color: #e74c3c;">[Project Page]</a>
+            </p>
+        </li>
+        <li style="margin-bottom: 20px;">
+            <p>Javed Iqbal, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali.<br>
+               <strong>"Leveraging orientation for weakly supervised object detection with application to firearm localization"</strong>. 
+               In <strong>Neurocomputing (2021)</strong>.<br>
+               <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X" style="text-decoration: none; color: #3498db;">[Paper]</a> 
+               <a href="https://github.com/akhtarvision/orientation-aware-firearm-detection" style="text-decoration: none; color: #e74c3c;">[Code]</a>
+            </p>
+        </li>
     </ul>
 
     <!-- Experience Section -->
