--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Akhtar, CV & DL
         <!-- Left section: Title, Social Links, and Email Addresses -->
         <div>
             <p style="font-family: 'Arial', sans-serif; font-size: 20px; color: #333; line-height: 1.5; margin: 0;">
-                <strong style="font-size: 22px; color: #2c3e50;">Research Associate (Computer Vision)</strong><br>
+                <strong style="font-size: 22px; color: #2c3e50;">Postdoctoral Research Associate (Computer Vision)</strong><br>
                 <span style="font-size: 18px; color: #7f8c8d;">MBZUAI, Abu Dhabi</span><br>
                 <span style="font-size: 16px; color: #7f8c8d;">United Arab Emirates</span><br>
 
@@ -52,7 +52,7 @@ title: Akhtar, CV & DL
         <li style="margin-bottom: 20px;">
             <p><b style="color: #1f78b4;">Muhammad Akhtar Munir*</b>, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
                <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
-               In <strong>arXiv (2024)</strong>.<br> <i>*Equally contributing first authors.</i>
+               In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
                <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
                <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="text-decoration: none; color: #e74c3c;">[Code]</a>
             </p>
