--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Akhtar, CV & DL
+title: Akhtar, CV & ML
 ---
 
 <div class="blurb">
@@ -13,7 +13,7 @@ title: Akhtar, CV & DL
         <!-- Left section: Title, Social Links, and Email Addresses -->
         <div>
             <p style="font-family: 'Arial', sans-serif; font-size: 20px; color: #333; line-height: 1.5; margin: 0;">
-                <strong style="font-size: 22px; color: #2c3e50;">Postdoctoral Research Associate (Computer Vision)</strong><br>
+                <strong style="font-size: 22px; color: #2c3e50;">Postdoc. Research Associate (CV & ML)</strong><br>
                 <span style="font-size: 18px; color: #7f8c8d;">MBZUAI, Abu Dhabi</span><br>
                 <span style="font-size: 16px; color: #7f8c8d;">United Arab Emirates</span><br>
 
